--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<! DOCTYPE html>
 <html lang="de">
 <head>
     <meta charset="UTF-8">
@@ -6,14 +6,14 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <title>Fitness Tracker</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style. css">
 </head>
 <body>
     <div class="container">
         <!-- Header -->
         <header>
             <h1>Fortschritt</h1>
-            <button id="addBtn" class="add-btn">💬</button>
+            <button id="addBtn" class="add-btn">+</button>
         </header>
 
         <!-- Graph Section -->
@@ -49,7 +49,7 @@
             <!-- Chart Canvas -->
             <div class="chart-container">
                 <canvas id="weightChart"></canvas>
-                <p id="emptyState" class="empty-state">Noch keine Daten vorhanden.<br/>Tippe auf 💬 um zu starten.</p>
+                <p id="emptyState" class="empty-state">Noch keine Daten vorhanden. <br/>Tippe auf + um zu starten. </p>
             </div>
         </section>
 
@@ -75,7 +75,7 @@
                 <!-- Gewicht -->
                 <div class="input-group">
                     <label>Gewicht (kg)</label>
-                    <input type="number" id="weightInput" placeholder="z.B. 75.5" step="0.1" />
+                    <input type="number" id="weightInput" placeholder="z.B. 75. 5" step="0.1" />
                 </div>
 
                 <!-- Datum -->
