Initial commit: Fitness Tracker mit Swipe-to-Delete

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<! DOCTYPE html>
+<!DOCTYPE html>
 <html lang="de">
 <head>
     <meta charset="UTF-8">
@@ -6,7 +6,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <title>Fitness Tracker</title>
-    <link rel="stylesheet" href="style. css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
@@ -36,20 +36,23 @@
 
             <!-- Zeitraum Picker -->
             <div class="time-range-picker">
-                <button class="range-btn active" data-range="Alle">Alle</button>
-                <button class="range-btn" data-range="1 Woche">1 Woche</button>
-                <button class="range-btn" data-range="1 Monat">1 Monat</button>
-                <button class="range-btn" data-range="2 Monate">2 Monate</button>
-                <button class="range-btn" data-range="3 Monate">3 Monate</button>
-                <button class="range-btn" data-range="6 Monate">6 Monate</button>
-                <button class="range-btn" data-range="1 Jahr">1 Jahr</button>
-                <button class="range-btn" data-range="Seit Anfang">Seit Anfang</button>
+<div class="time-range-picker">
+    <select id="timeRangeSelect">
+        <option value="Alle">Alle</option>
+        <option value="1 Woche">1 Woche</option>
+        <option value="1 Monat">1 Monat</option>
+        <option value="2 Monate">2 Monate</option>
+        <option value="3 Monate">3 Monate</option>
+        <option value="6 Monate">6 Monate</option>
+        <option value="1 Jahr">1 Jahr</option>
+        <option value="Seit Anfang">Seit Anfang</option>
+    </select>
             </div>
 
             <!-- Chart Canvas -->
             <div class="chart-container">
                 <canvas id="weightChart"></canvas>
-                <p id="emptyState" class="empty-state">Noch keine Daten vorhanden. <br/>Tippe auf + um zu starten. </p>
+                <p id="emptyState" class="empty-state">Noch keine Daten vorhanden.<br/>Tippe auf 💬 um zu starten.</p>
             </div>
         </section>
 
@@ -75,7 +78,7 @@
                 <!-- Gewicht -->
                 <div class="input-group">
                     <label>Gewicht (kg)</label>
-                    <input type="number" id="weightInput" placeholder="z.B. 75. 5" step="0.1" />
+                    <input type="number" id="weightInput" placeholder="z.B. 75.5" step="0.1" />
                 </div>
 
                 <!-- Datum -->
