--- a/index copy.html
+++ b/index copy.html
@@ -75,41 +75,14 @@
             </section>
         </div>
 
-        <!-- NSUNS VIEW - ÜBERSICHT -->
+        <!-- NSUNS VIEW -->
         <div id="nsunsView" class="view-content">
             <section class="nsuns-section">
-                <h2>Trainingswochen</h2>
-                <div id="weeksList" class="weeks-list">
-                    <p class="empty-state">Noch keine Trainingswochen.<br/>Tippe auf + um zu starten.</p>
-                </div>
+                <h2>Nsuns</h2>
+                <p style="color: #888; padding: 60px 20px; text-align: center;">
+                    Hier kommt bald dein Nsuns-Feature!
+                </p>
             </section>
-        </div>
-
-        <!-- NSUNS VIEW - WOCHENDETAIL -->
-        <div id="nsunsDetailView" class="view-content">
-            <div class="detail-header">
-                <button id="backToWeeksBtn" class="back-btn">← Zurück</button>
-                <h2 id="weekDetailTitle">Trainingswoche</h2>
-            </div>
-            
-            <div class="workout-tabs">
-                <button class="workout-tab active" data-workout="a">Workout A</button>
-                <button class="workout-tab" data-workout="b">Workout B</button>
-            </div>
-
-            <!-- Workout A Content -->
-            <div id="workoutAContent" class="workout-content active">
-                <p style="color: #888; padding: 40px 20px; text-align: center;">
-                    Workout A - Kommt bald!
-                </p>
-            </div>
-
-            <!-- Workout B Content -->
-            <div id="workoutBContent" class="workout-content">
-                <p style="color: #888; padding: 40px 20px; text-align: center;">
-                    Workout B - Kommt bald!
-                </p>
-            </div>
         </div>
     </div>
 
